after logging out. Reported by Matt Rolf (Bug #1149). [David]

=item *

Fixed a bug uploading a file to a related media element when that related
media element has lockable fields. Reported by Scott (Bug #1353). [David]

=item *

Editing user prefs when SSL is enabled no longer breaks the User profile.
Reported by Scott (Bug#1339). [David]

=back

=head1 VERSION 1.10.5 (2008-04-29)

=head2 Improvements

=over

=item *

Added support for the JS-Quicktags WYSIWYG editor. [Greg Heo]

=item *

API doc corrections reported by Rod Taylor. [Scott]

=item *

Added the C<active_sites> parameter to C<< Bric::Biz::Category->list >>.
[David]

=item *

Categories associated with inactive sites are no longer displayed in the
category manager. Suggested by Jesper Andersen (Bug # 1286). [David]

=item *

Improved the display of related media and story information in the element
list, including links to preview them (Bug # 1293). [David]

=item *

The C<get_related_objects()> method of
L<Bric::Biz::Asset::Business|Bric::Biz::Asset::Business> now only returns
relateds for an alias that are in the same site as the alias, or that are
aliases in the same site of the original relateds. This means that the
automatic publishing of related documents should now properly republish only
relateds in the same site as the alias document being published, rather than
the relateds of the document it aliases (Bug # 1296). [David]

=item *

In the New Story form, the "Slug" field is no longer required if the
C<ALLOW_SLUGLESS_NONFIXED> F<bricolage.conf> directive is disabled and the
C<AUTOGENERATE_SLUG> directive is enabled. It is still required in the normal
story edit form, of course. Suggested by Phillip Smith (Bug # 1306). [David]

=item *

When the C<ENABLE_CATEGORY_BROWSER> F<bricolage.conf> directive is disabled
(as it is by default), allow the categories to be deleted from the story
profile when a user checks the delete checkbox and clicks "Save" or "Check